<resources>
    <string name="walk_1">Bem-vindo(a)</string>
    <string name="walk_2">Agilidade</string>
    <string name="walk_3">Comodidade</string>
    <string name="walk_1_description">Serviços para transportar você ou sua entrega onde você precisa. Nossos motoristas são apaixonados pelo que fazem.</string>
    <string name="walk_2_description">APOP é a maneira mais ágil de se locomover. Um toque e um carro ou moto vai até você.</string>
    <string name="walk_3_description">Solicite uma viagem e pague com dinheiro ou cartão. A escolha é sua!</string>
    <string name="share_text">Vai sair? Use nosso aplicativo de Mobilidade urbana!
        \nhttps://play.google.com/store/apps/details?id=com.passageiro.minasmob
        \nPara se cadastrar você precisa do código de indicação, use meu código:  %2$s</string>
    <string name="share_link">https://play.google.com/store/apps/details?id=br.com.motorista.minasmob</string>
    <string name="share_content_referral">
       Venha conhecer o melhor aplicativo de mobilidade urbana dos mineiros.\nMe Levi car foi criado para atender todas as suas necessidades para se \nlocomover com rapidez, segurança e economia, confira!
        \nBaixe o app:
        \nMinas Mob -https://play.google.com/store/apps/details?id=com.passageiro.minasmob
        \nPara se cadastrar você precisa do código de indicação,  use meu código:  %2$s</string>
    <string name="nav_header_desc">Menu do Cabeçalho</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Cadastrar</string>
    <string name="or_connect_with_social"></string>
    <string name="enter_the_details_you_used_to_register">Informe seus dados para se cadastrar</string>
    <string name="email">Email</string>
    <string name="name">Nome</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="phone_number">Celular</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirme a Senha </string>
    <string name="register">Cadastrar</string>
    <string name="welcome_back_sign_in_to_continue">Bem-vindo(a) de volta, faça login para continuar</string>
    <string name="what_your_email_address">Qual é o seu e-mail</string>
    <string name="enter_your_password">Informe sua senha</string>
    <string name="enter_your_email">Informe seu e-mail</string>
    <string name="i_forgot_my_password">Esqueci a minha senha</string>
    <string name="i_need_to_create_an_account">Quero criar uma conta</string>
    <string name="invalid_email">Por favor informe seu e-mail</string>
    <string name="invalid_password">Por favor informe a senha</string>
    <string name="invoice">Fatura</string>
    <string name="pay_now">Pagamento Confirmado!</string>
    <string name="time_taken">Tempo Gasto</string>
    <string name="distance_travelled">Distância Percorrida</string>
    <string name="base_fare">Total</string>
    <string name="distance_fare">Tarifa por Distância</string>
    <string name="tax"> Vlr Aprox de Imposto</string>
    <string name="total">Total da Viagem</string>
    <string name="cash">Dinheiro</string>
    <string name="payment">Pagamento</string>
    <string name="estimated_payment">Pagamento:</string>
    <string name="your_trips">Minhas Viagens</string>
    <string name="coupon">Cupom de Desconto</string>
    <string name="view_coupon">Ver Cupons</string>
    <string name="wallet">Carteira</string>
    <string name="transfer">Solicitação de saque</string>
    <string name="passbook">Histórico</string>
    <string name="sq">Cotação Indique</string>
    <string name="help">Suporte e Ajuda</string>
    <string name="delivery">Delivery</string>
    <string name="share">Indicar Passageiro</string>
    <string name="faq_support">Suporte</string>
    <string name="terms_and_conditions">Termos e Condições</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="logout">Sair</string>
    <string name="save">Salvar</string>
    <string name="looking_to_change_password">Mudar minha senha</string>
    <string name="profile">Perfil</string>
    <string name="change_password">Mudar Senha</string>
    <string name="current_password">Senha Atual</string>
    <string name="new_password">Nova Senha</string>
    <string name="support">Suporte</string>
    <string name="our_team_persons_will_contact_you_soon">Clique no botão e fale com nossa central de atendimento para suporte ou ajuda.</string>
    <string name="past">Concluídas</string>
    <string name="upcoming">Agendadas</string>
    <string name="wallet_history">Histórico da Carteira</string>
    <string name="coupon_history">Histórico de Cupons</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="use_wallet_amount">Usar carteira</string>
    <string name="past_trip_details">Detalhes da Viagem Concluída</string>
    <string name="payment_method">Modo de Pagamento</string>
    <string name="cancel_ride">Cancelar Viagem</string>
    <string name="call">Ligar</string>
    <string name="pay_via">Pago com</string>
    <string name="comments">Comentários</string>
    <string name="dispute">Disputa</string>
    <string name="view_receipt">Veja o Recibo</string>
    <string name="upcoming_trip_details">Detalhes da Viagem Agendada</string>
    <string name="no_past_found">Você não concluíu nenhuma viagem</string>
    <string name="no_upcoming_found">Nenhuma viagem agendada</string>
    <string name="no_data_found">Nenhum registro encontrado</string>
    <string name="booking_id">ID Viagem</string>
    <string name="settings">Locais Favoritos</string>
    <string name="favorites">Locais Favoritos</string>
    <string name="choose_language">Selecionar Idioma</string>
    <string name="lost_my_item">Perdi meu item</string>
    <string name="incorrect_charge_dispute">Disputa de cobrança incorreta</string>
    <string name="i_would_like_to_refund">Eu gostaria de reembolsar</string>
    <string name="submit">Enviar</string>
    <string name="close">Fechar</string>
    <string name="write_your_comment">Escreva seu comentário</string>
    <string name="reason_for_canceling">Motivo do cancelamento</string>
    <string name="ratings">Classificação</string>
    <string name="get_pricing">Prosseguir</string>
    <string name="please_click_back_again_to_exit">Por favor, clique novamente para sair</string>
    <string name="choose_a_date">Selecionar Data</string>
    <string name="choose_a_time">Selecionar Hora</string>
    <string name="schedule_a_ride">Agendar Viagem</string>
    <string name="schedule_request">Solicitar Agendamento</string>
    <string name="fare_km">Tarifa por km</string>
    <string name="fare_type">Tipo de Tarifa</string>
    <string name="capacity">Capacidade</string>
    <string name="done">CHAMAR</string>
    <string name="rate_card">Tarifa de Cartão</string>
    <string name="where_to">Para onde vamos?</string>
    <string name="pickup_location">Local de partida</string>
    <string name="location">Localização</string>
    <string name="home">Casa</string>
    <string name="work">Trabalho</string>
    <string name="driver_has_arrived_your_location">O motorista chegou no local</string>
    <string name="due_to_peek_hours">Nos horários de pico, as taxas podem variar com base na disponibilidade dos motoristas.</string>
    <string name="cancel">Cancelar</string>
    <string name="add_amount">Adicionar Valor pelo PicPay</string>
    <string name="add_money">Adicionar Dinheiro na Carteira pelo PicPay</string>
    <string name="add_coupon_code">Adicionar Código de Cupom</string>
    <string name="no_coupon_added">Nenhum Cupom Adicionado</string>
    <string name="add_coupon">Adicionar Cupom</string>
    <string name="estimated_fare">Tarifa Estimada</string>
    <string name="eta">Chega em</string>
    <string name="model">Modelo</string>
    <string name="schedule_ride">Agendar Viagem</string>
    <string name="ride_now">Chamar Agora</string>
    <string name="due_to_high_demand_price_may_vary">Devido a alta demanda o preço pode variar</string>
    <string name="choose_an_account">Selecione uma conta</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="white_space"> </string>
    <string name="amount">Valor</string>
    <string name="credited_by">Creditado por</string>
    <string name="card">Cartão</string>
    <string name="credit_card">Cartão de Crédito</string>
    <string name="debit_machine">Maquininha de Cartão</string>
    <string name="offer">Cupons</string>
    <string name="coupon_code">Código do Cupom</string>
    <string name="card_payment">Meus Cartões</string>
    <string name="add_card_for_payments">Adicionar cartão</string>
    <string name="other_payment">Outras Formas de Pagamento</string>
    <string name="by_cash">Dinheiro</string>
    <string name="paypal">Via Paypal</string>
    <string name="sos">SOS</string>
    <string name="sos_alert">Alerta SOS</string>
    <string name="are_sure_you_want_to_emergency_alert">Alerta enviado para central!</string>
    <string name="finding_driver">Procurando motoristas</string>
    <string name="cancel_request">Cancelar Solicitação</string>
    <string name="are_sure_you_want_to_cancel_the_request">Tem certeza de que deseja cancelar a solicitação?</string>
    <string name="invalid_first_name">Por favor, informe seu nome</string>
    <string name="invalid_last_name">Por favor, informe seu sobrenome</string>
    <string name="invalid_mobile">Por favor, informe seu telefone</string>
    <string name="invalid_confirm_password">Por favor, insira a senha de confirmação</string>
    <string name="password_should_be_same">A senha deve ser a mesma informada acima</string>
    <string name="your_wallet_amount_is">Para creditar em sua carteira</string>
    <string name="become_driver">Quero ser motorista</string>
    <string name="invite_friend">Indique e Ganhe</string>
    <string name="notification_manager">Clube MGMob</string>
    <string name="suporte">Após adicionar crédito, vá até o menu, clique no suporte e envie comprovante para nossa central ativar o saldo em sua carteira.</string>
    <string name="favorito">Meus Motoristas</string>
    <string name="premio_bonus">Premio Bonus</string>
    <string name="crf">Código de Indicação</string>
    <string name="entrecodreferencia">Código</string>
    <string name="pixx">Faça sua recarga com PIX ou PicPay. Para recarga com PIX a chave é 67998668513 ou via PicPay através do botão abaixo.</string>
    <string name="txtaviso">Em sua Carteira digital do Me Levi car você poderá inserir créditos antecipados que poderão ser usados em corridas, receberá suas bonificações de promoções e também serão debitadas as TAXAS DE CANCELAMENTO.\n\nApós adicionar crédito, vá até o menu, clique no suporte e envie comprovante para nossa central ativar o saldo em sua carteira.\n\nFaça sua recarga com PIX ou PicPay. Para recarga com PIX a chave é 67998668513 ou via PicPay através do botão abaixo.\n\nFique atento ao saldo negativo de taxas de cancelamentos, podem ocorrer bloqueio do seu usuário.\n\nEm caso de dúvidas fale pelo menu Suporte e Ajuda com nossa central de atendimento.</string>
    <string name="chave_pix">67998668513</string>
    <string name="id_indicado">Caso não tenha o código de indicação, insira 456</string>
    <string name="saude">Educaçao/Saúde</string>
    <string name="doc">Documento</string>
</resources>