<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#403E3E"
    tools:context=".ui.activity.wallet.WalletActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/suporte"
                    android:textColor="#CCCACA"
                    android:visibility="gone"
                    android:textSize="14dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_wallet_amount_is"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_18"
                    android:visibility="gone"
                    android:gravity="center_horizontal" />
                <TextView
                    android:id="@+id/ivWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/app_name"
                    android:text="@string/pixx"
                    android:textColor="#CCCACA"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"
                    tools:ignore="UseAppTint" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/txtaviso"
                    android:text="Em sua Carteira digital do Me levi car você poderá inserir créditos antecipados que poderão ser usados em corridas.\n\nVocê receberá suas bonificações de promoções e também serão debitadas as TAXAS DE CANCELAMENTO.\n\nUtilize o botão abaixo e faça sua recarga com PIX ou PicPay.\n\nApós realizar o pagamento, vá até o menu inicial, clique no Suporte e envie comprovante para nossa central de atendimento ativar o saldo em sua carteira. O seu saldo só será ativado após o envio do comprovante.\n\nFique atento ao saldo negativo de taxas de cancelamentos, seu usuário poderá ser bloqueado. "
                    android:textColor="#CCCACA"
                    android:textSize="@dimen/_12sdp"
                    android:textAlignment="center"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="395dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/clanpro_narrnews"
                    android:text="Seu saldo atual é:"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/wallet_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clanpro_narrnews"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="43sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/copias"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/copi"
                    tools:ignore="UseAppTint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="#FF9800"
                            android:text="CHAVE PIX\n" />

                        <TextView
                            android:id="@+id/txt_pix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:text="@string/chave_pix"
                            android:textColor="#FF9800"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            tools:ignore="UseAppTint" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddMoneyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/add_money"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_16" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        android:orientation="horizontal">

                        <com.minasmob.passageiro.common.PrefixEditText
                            android:id="@+id/amount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:background="@drawable/border_bottom"
                            android:inputType="number"
                            android:padding="8dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/_30"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_border"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:singleLine="true"
                                android:textSize="@dimen/text_12" />

                            <Button
                                android:id="@+id/_50"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_border"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:singleLine="true"
                                android:textSize="@dimen/text_12" />

                            <Button
                                android:id="@+id/_100"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="4dp"
                                android:layout_weight="1"
                                android:background="@drawable/button_border"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:singleLine="true"
                                android:textSize="@dimen/text_12" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="53dp" />

        </LinearLayout>

        <Button
            android:id="@+id/add_amount"
            style="@style/MyButton.Primary"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:text="@string/add_amount" />

    </RelativeLayout>

</ScrollView>